add new layout, additional menu

--- a/src/main/resources/templates/fractions-calculator.html
+++ b/src/main/resources/templates/fractions-calculator.html
@@ -6,7 +6,7 @@
     <head>
         <title>Kalkulator ułamków</title>
         <meta charset="UTF-8" />
-        <link rel="stylesheet" type="text/css" th:href="@{/static/css/style.css}" href="/static/css/style.css"/>
+        <link rel="stylesheet" type="text/css" th:href="@{/static/css/style.css}" href=".../resources/static/css/style.css"/>
         <style>
             table {padding: 15px 15px 15px 15px;}
             
