--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -10,12 +10,14 @@
     <body>
         <section layout:fragment="content">
             <h2 style="text-align: center;">Wybierz kalkulator zwykły, zaawansowany lub ułamków!</h2>
+
                 <a href="/calculator"><img th:src="@{images/calcbasic.png}" src=".../resources/static/images/calcbasic.png"
-                                           alt="obrazek" style="float: left; padding: 10px 5px 10px 0;"/></a>
+                                           alt="obrazek" style="padding: 20px 5px 10px 0;"/></a>
                 <a href="/advanced"><img th:src="@{images/calcadvanced.png}" src=".../resources/static/images/calcadvanced.png"
-                                         alt="obrazek" style="float: left; padding: 50px 5px 10px 0px;"/></a>
+                                         alt="obrazek" style="padding: 40px 5px 10px 0px;"/></a>
                 <a href="/fractions"><img th:src="@{images/calcfractions.png}" src=".../resources/static/images/calcfractions.png"
-                                          2alt="obrazek" style="float: left; padding: 90px 5px 10px 0px;"/></a>
+                                          2alt="obrazek" style="padding: 0px 5px 10px 0px;"/></a>
+
         </section>
     </body>
 </html>
