--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -2,11 +2,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
-
+    
 <head>
     <title>Kalkulator</title>
-<!--    <title layout:title-pattern="$LAYOUT_TITLE - $CONTENT_TITLE">Kalkulator</title>-->
-
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" th:href="@{css/style.css}" href=".../resources/static/css/style.css"/>
@@ -14,45 +12,81 @@
 
 <body>
      
-    <div class="container">
+<div class="container">
 
-        <header>
-            <img th:src="@{images/header.jpg}" src=".../resources/static/images/header.jpg" alt="obrazek"/>
-            
-        </header>
-        <div class="box_header">
-            <input type="text" placeholder="Szukaj" style="margin: 10px 0 10px 0;"/>
-            <a href="/registration"><input type="submit" value="Rejestracja" style="margin: 10px 0 10px 0; width: 120px; align: right;"/></a>
-            <a href="/logging"><input type="submit" value="Zaloguj" style="margin: 10px 0 10px 0; width: 120px;"/></a>
-        </div>
-        
-<aside>
-    <nav>
-        <ul>
+<header>
+    <div class="find_register_login">
+                <input type="text" placeholder="Szukaj" style="margin: 13px 10px 10px 0;"/>
+                <a href="/registration"><input type="submit" value="Rejestracja" style="margin: 10px 10px 10px 0; width: 120px; align: right;"/></a>
+                <a href="/logging"><input type="submit" value="Zaloguj" style="margin: 10px 10px 10px 0; width: 120px;"/></a>
+    </div>
+</header>
+    <div style="clear: both;"></div>
+<nav>
+    <div class="header_menu">
+        <ol>
             <li><a href="/">Home</a></li>
-            <li><a href="/calculator">Kalkulator podstawowy</a></li>
-            <li><a href="/advanced">Kalkulator zaawansowany</a></li>
-            <li><a href="/fractions">Kalkulator ułamków</a></li>
-            <li><a href="contact">Kontakt</a></li>
-        </ul>
-    </nav>
-</aside>
+            <li><a href="/calculator">Kalkulator</a>
+                <ul>
+                    <li style="width: 140px;"><a href="/calculator"/>Podstawowy</li>
+                    <li style="width: 140px;"><a href="/advanced"/>Zaawansowany</li>
+                    <li style="width: 140px;"><a href="/fractions"/>Ułamkowy</li>
+                </ul>
+            </li>
+            <li><a href="#">Kalkulator ułamków</a></li>
+            <li><a href="#">Ułamki podstawy</a>
+                <ul>
+                    <li><a href="/build-fraction"/>Budowa ułamka</li>
+                    <li><a href="/"/>Czytanie ułamków</li>
+                    <li><a href="/"/>Ułamek jako iloraz</li>
+                    <li><a href="/"/>Rodzaje ułamków zwykłych</li>
+                    <li><a href="/"/>Zamiana liczby mieszanej na ułamek niewłaściwy</li>
+                    <li><a href="/"/>Wyłączanie całości</li>
+                    <li><a href="/"/>Rozszerzanie ułamków zwykłych</li>
+                    <li><a href="/"/>Skracanie ułamków zwykłych</li>
+                    <li><a href="/"/>Sprowadzanie do wspólnego mianownika</li>
+                    <li><a href="/"/>Porównywanie ułamków zwykłych</li>
+                </ul>
+            </li>
+            <li><a href="/">Ułamki działania</a>
+                <ul>
+                    <li><a href="/"/>Dodawanie ułamków o jednakowych mianownikach</li>
+                    <li><a href="/"/>Dodawanie ułamków o różnych mianownikach</li>
+                    <li><a href="/"/>Odejmowanie ułamków o jednakowych mianownikach</li>
+                    <li><a href="/"/>Odejmowanie ułamków o różnych mianownikach</li>
+                    <li><a href="/"/>Odejmowanie ułamków - przypadki specjalne</li>
+                    <li><a href="/"/>Mnożenie ułamków przez liczbę naturalną</li>
+                    <li><a href="/"/>Mnożenie ułamków</li>
+                    <li><a href="/"/>Odwrotność ułamka</li>
+                    <li><a href="/"/>Dzielenie ułamków</li>
 
-
+                </ul>
+            </li>
+            <li><a href="/">Ułamki dodatek</a>
+                <ul>
+                    <li><a href=""/>Obliczanie ułamka liczby</li>
+                    <li><a href=""/>Zamiana na ułamek dziesiętny</li>
+                    <li><a href=""/>Zamiana na ułamek dziesiętny cz 2</li>
+                    <li><a href=""/>Ciekawostki o ułamkach</li>
+                </ul>
+            </li>
+            <li><a href="/contact">Kontakt</a></li>
+            <li style="width: 50px;"><a href="/login"><img th:src="@{images/icon_log.png}"
+                        src=".../resources/static/images/icon_log.png"/></a></li>
+            <li style="width: 50px;"><a href="/find"><img th:src="@{images/icon_find.png}"
+                        src=".../resources/static/images/icon_find.png"/></a></li>
+        </ol>
+    </div>
+</nav>
+    <div style="clear: both;"></div>
 <section id="main">
-    
     <div layout:fragment="content">Zawartość kolejnych stron.
     </div>
-    
 </section>
 
-<div class="push"></div>
-
-</div>
-
 <footer>
-    <p>Kalkulator  2020</p>
+    <p>Kalkulator  2021</p>
 </footer>
-
+</div>
 </body>
 </html>
