--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -19,7 +19,7 @@ body {
 	min-height: 100%;
 	height: auto !important;
 	height: 100%;
-	margin:0 auto -55px auto;
+	margin:0 auto -70px auto;
 	width: 100%;
 }
 
@@ -31,14 +31,27 @@ header {
 	width: 100%;
 }
 
+.h1_header {
+	position: absolute;
+	right: 450px;
+	top: 0;
+	line-height: 178px;
+	vertical-align: middle;
+	color: #616161;
+	font-size: 40px;
+	font-weight: bold;
+}
+
 .find_register_login {
 	float: right;
-	height: 180px;
+	height: 178px;
 	width: 200px;
 	text-align: right;
 }
 
-.header_menu {
+nav {}
+
+.top_menu {
 	position: sticky;
 	left: 0px;
 	top: 0px;
@@ -46,10 +59,9 @@ header {
 	width: 100%;
 	height: 50px;
 	text-align: center;
-
 }
 
-nav ol {
+.top_menu ol {
 	padding: 0;
 	margin: 0;
 	list-style-type:none;
@@ -60,23 +72,23 @@ nav ol {
 	display: inline-flex;
 }
 
-nav ol a {
+.top_menu ol a {
 	color: #696969;
 	text-decoration: none;
 	display: block;
 }
 
-nav ol > li {
+.top_menu ol > li {
 	float: left;
 	width: 150px;
 	height: 50px;
 }
 
-nav ol > li:hover {
+.top_menu ol > li:hover {
 	background-color: #faebd7;
 }
 
-nav ol > li:hover > a {
+.top_menu ol > li:hover > a {
 	color: #4682b4;
 }
 
@@ -86,7 +98,7 @@ nav ol > li:hover > a {
 /*	color: #696969;*/
 /*	font-weight: bold;*/
 /*	font-size: 16px;*/
-/*	!*background: #FAF7E5; !*#add8e6;*! !*antiquewhite;*!*!*/
+/*	!*background: #FAF7E5;
 /*	border-radius: 2px;*/
 /*}*/
 
@@ -98,7 +110,7 @@ nav ol > li:hover > a {
 /*	outline: none;*/
 /*}*/
 
-nav ol > li > ul {
+.top_menu ol > li > ul {
 	list-style-type: none;
 	padding: 0;
 	margin: 0;
@@ -106,11 +118,11 @@ nav ol > li > ul {
 	display: none;
 }
 
-nav ol > li:hover > ul {
+.top_menu ol > li:hover > ul {
 	display: block;
 }
 
-nav ol > li > ul > li {
+.top_menu ol > li > ul > li {
 	background-color:#faebd7;
 	position: relative;
 	z-index: 100;
@@ -124,42 +136,78 @@ nav ol > li > ul > li {
 	font-weight: normal;
 }
 
-nav ol > li > ul > li:hover {
+.top_menu ol > li > ul > li:hover {
 	background-color: #ddd3ae;
 }
 
-nav ol > li > ul > li:hover > a {
+.top_menu ol > li > ul > li:hover > a {
 	color: #4682b4;
 }
 
-#main {
+.container_content {
+	float: none;
 	width: 1100px;
+	height: 100%;
 	margin: 15px auto 15px auto;
-	padding: 10px 10px 10px 10px;
-	background: #dddddd;
-	color: navy;
+	padding: 0;
 	text-align: center;
 	border: 1px solid steelblue;
 }
 
-article {
+.container_content h2 {
+	color: #696969;
+}
+
+main {}
+
+
+.home_box {
+	display: inline-block;
+	height: 220px;
+	width: 31%;
+	margin: 5px;
+	padding: 5px;
+	color: #696969; /*#414141*/
+	background: #dfdfdf;
+	text-align: center;
+	vertical-align: middle;
+	border-radius: 3px;
+}
+
+.home_box:hover {
+	background: #f1f1f1;
+	border: 1px solid navy;
+}
+
+.home_box p {
+	text-align: justify;
+}
+
+.left {
 	float: left;
-	width: 47%;
-	/*padding: 10px 10px 10px 10px;*/
+	/*display: inline-block;*/
+	width: 60%;
+	height: 100%;
+	margin: 0px 0px 0px 0px;
+	padding: 10px 10px 10px 30px;
 	text-align: left;
 	font-size: medium;
-	color: springgreen; /*#777777;*/
+	color: #696969; /*#777777;*/
+	background: #e7e7e7;
 	border: 1px solid red;
 }
 
-aside {
+.right {
 	float: right;
-	width: 47%;
-	/*padding: 10px 10px 10px 40px;*/
+	/*diplay: inline-block;*/
+	width: 30%;
+	height: 100%;
+	margin: 0px 0px 0px 0px;
+	padding: 10px 10px 10px 10px;
 	text-align: left;
 	font-size: medium;
-	color: #777777;
-	background: ivory;
+	color: #696969;
+	background: #dddddd;
 	border: 1px solid blue;
 }
 
@@ -169,12 +217,12 @@ aside {
 }
 
 footer {
-	clear: both;
+	/*clear: both;*/
 	width: 100%;
 	bottom: 0;
-	color: black;
+	color: #696969;
 	font-weight: bolder;
-	background: #Ddd3ae; /*#F9E04B;*/
+	background: #ddd3ae; /*#F9E04B;*/
 	padding:10px 0 0 0;
 	/*margin: 0 0 10px;*/
 	height: 30px;
