--- a/src/main/resources/templates/build-fraction.html
+++ b/src/main/resources/templates/build-fraction.html
@@ -9,40 +9,50 @@
 </head>
 <body>
 <section layout:fragment="content">
-    <h2 style="text-align: center;">Niestety, ta część witryny nie jest jeszcze dostępna.</h2>
-<article>
-    <h3>Wkrótce znajdziesz tu zagadnienia, które pomogą Ci zrozumieć czym są ułamki zwykłe oraz jak wykonywać działania na nich.</h3>
-    <p>Oto pełna lista tematów:</p><br>
-    <ol>
-        <li>Budowa ułamka</li>
-        <li>Czytanie ułamków</li>
-        <li>Ułamek jako iloraz</li>
-        <li>Rodzaje ułamków zwykłych</li>
-        <li>Zamiana liczby mieszanej na ułamek niewłaściwy</li>
-        <li>Wyłączanie całości</li>
-        <li>Rozszerzanie ułamków zwykłych</li>
-        <li>Skracanie ułamków zwykłych</li>
-        <li>Sprowadzanie do wspólnego mianownika</li>
-        <li>Porównywanie ułamków zwykłych</li>
-        <li>Dodawanie ułamków o jednakowych mianownikach</li>
-        <li>Dodawanie ułamków o różnych mianownikach</li>
-        <li>Odejmowanie ułamków o jednakowych mianownikach</li>
-        <li>Odejmowanie ułamków o różnych mianownikach</li>
-        <li>Odejmowanie ułamków - przypadki specjalne</li>
-        <li>Mnożenie ułamków przez liczbę naturalną</li>
-        <li>Mnożenie ułamków</li>
-        <li>Odwrotność ułamka</li>
-        <li>Dzielenie ułamków</li>
-        <li>Obliczanie ułamka liczby</li>
-        <li>Zamiana na ułamek dziesiętny</li>
-        <li>Zamiana na ułamek dziesiętny cz 2</li>
-        <li>Ciekawostki o ułamkach</li>
-    </ol>
-</article>
-<aside>
-    <p>Tu na razie jest ściernisko...</p><br>
-    <img src="images/fraction34.png" alt="ułamek"/>
-</aside>
+    <h2>Niestety, ta część witryny jest w trakcie budowy.</h2><br>
+    <div style="clear: both"></div>
+    <div class="left">
+         <main>
+            <article>
+            <h3>Wkrótce znajdziesz tu zagadnienia, które pomogą Ci zrozumieć czym są ułamki zwykłe
+                oraz jak wykonywać działania na nich.</h3><br>
+            <p>Oto pełna lista tematów:</p><br>
+            <ol>
+                <li>Budowa ułamka</li>
+                <li>Czytanie ułamków</li>
+                <li>Ułamek jako iloraz</li>
+                <li>Rodzaje ułamków zwykłych</li>
+                <li>Zamiana liczby mieszanej na ułamek niewłaściwy</li>
+                <li>Wyłączanie całości</li>
+                <li>Rozszerzanie ułamków zwykłych</li>
+                <li>Skracanie ułamków zwykłych</li>
+                <li>Sprowadzanie do wspólnego mianownika</li>
+                <li>Porównywanie ułamków zwykłych</li>
+                <li>Dodawanie ułamków o jednakowych mianownikach</li>
+                <li>Dodawanie ułamków o różnych mianownikach</li>
+                <li>Odejmowanie ułamków o jednakowych mianownikach</li>
+                <li>Odejmowanie ułamków o różnych mianownikach</li>
+                <li>Odejmowanie ułamków - przypadki specjalne</li>
+                <li>Mnożenie ułamków przez liczbę naturalną</li>
+                <li>Mnożenie ułamków</li>
+                <li>Odwrotność ułamka</li>
+                <li>Dzielenie ułamków</li>
+                <li>Obliczanie ułamka liczby</li>
+                <li>Zamiana na ułamek dziesiętny</li>
+                <li>Zamiana na ułamek dziesiętny cz 2</li>
+                <li>Ciekawostki o ułamkach</li>
+            </ol>
+            </article>
+        </main>
+    </div>
+    <div class="right">
+        <aside>
+            <p>Ten element jest w budowie</p><br>
+            <img src="images/fraction34.png" alt="ułamek"/>
+            <p> </p>
+            <p> </p>
+        </aside>
+    </div>
 </section>
 </body>
 </html>
