footer,left, right

--- a/src/main/resources/templates/build-fraction.html
+++ b/src/main/resources/templates/build-fraction.html
@@ -10,10 +10,10 @@
 <body>
 <section layout:fragment="content">
     <h2>Niestety, ta część witryny jest w trakcie budowy.</h2><br>
-    <div style="clear: both"></div>
+<!--    <div style="clear: both"></div>-->
     <div class="left">
-         <main>
-            <article>
+<!--         <main>-->
+<!--            <article>-->
             <h3>Wkrótce znajdziesz tu zagadnienia, które pomogą Ci zrozumieć czym są ułamki zwykłe
                 oraz jak wykonywać działania na nich.</h3><br>
             <p>Oto pełna lista tematów:</p><br>
@@ -42,8 +42,8 @@
                 <li>Zamiana na ułamek dziesiętny cz 2</li>
                 <li>Ciekawostki o ułamkach</li>
             </ol>
-            </article>
-        </main>
+<!--            </article>-->
+<!--        </main>-->
     </div>
     <div class="right">
         <aside>
@@ -53,6 +53,7 @@
             <p> </p>
         </aside>
     </div>
+    <div style="clear: both";></div>
 </section>
 </body>
 </html>
