--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -35,7 +35,7 @@
             <li><a href="/build-fraction">Ułamki podstawy</a>
                 <ul>
                     <li><a href="/build-fraction"/>Budowa ułamka</a></li>
-                    <li><a href="/read-fraction"/>Czytanie ułamków</a></li>
+                    <li><a href="/build-fraction"/>Czytanie ułamków</a></li>
                     <li><a href="/build-fraction"/>Ułamek jako iloraz</a></li>
                     <li><a href="/build-fraction"/>Rodzaje ułamków zwykłych</a></li>
                     <li><a href="/build-fraction"/>Zamiana liczby mieszanej na ułamek niewłaściwy</a></li>
@@ -76,12 +76,12 @@
         </ol>
     </nav>
 </div>
-    <div style="clear: both;"></div>
+<!--    <div style="clear: both;"></div>-->
     <div layout:fragment="content" class="container_content">Zawartość kolejnych stron.</div>
     <div class="push"></div>
+</div>
 <footer>
     <p>Kalkulator  2021</p>
 </footer>
-</div>
 </body>
 </html>
