--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -9,9 +9,9 @@ html {height:100%;}
 body {
 	height:100%;
 	font-family: Calibri, Verdana, Arial;
-	font-size:14px;
-	line-height:1.5;
-	color:#414141;
+	font-size: 14px;
+	line-height: 1.5;
+	color: #414141;
 	background: #FAF7E5;
 }
 
@@ -19,7 +19,8 @@ body {
 	min-height: 100%;
 	height: auto !important;
 	height: 100%;
-	margin:0 auto -70px auto;
+	/*margin:0 auto -55px;*/
+	margin-bottom: -30px;
 	width: 100%;
 }
 
@@ -50,6 +51,10 @@ header {
 }
 
 nav {}
+
+ol, ul {
+	list-style-position: inside;
+}
 
 .top_menu {
 	position: sticky;
@@ -145,12 +150,12 @@ nav {}
 }
 
 .container_content {
-	float: none;
 	width: 1100px;
 	height: 100%;
 	margin: 15px auto 15px auto;
 	padding: 0;
 	text-align: center;
+	/*background: #fcfcfc;*/
 	/*border: 1px solid steelblue;*/
 }
 
@@ -181,34 +186,34 @@ main {}
 
 .home_box p {
 	text-align: justify;
+	padding-top: 20px;
+	text-indent: 10px;
 }
 
 .left {
+	/*display: table-cell;*/
 	float: left;
-	/*display: inline-block;*/
-	width: 60%;
-	height: 100%;
-	margin: 0px 0px 0px 0px;
-	padding: 10px 10px 10px 30px;
+	width: 75%;
+	margin: 0px;
+	padding: 10px 10px 10px 10px;
 	text-align: left;
 	font-size: medium;
 	color: #696969; /*#777777;*/
 	background: #e7e7e7;
-	border: 1px solid red;
+	/*border: 1px solid red;*/
 }
 
 .right {
+	/*display: table-cell;*/
 	float: right;
-	/*diplay: inline-block;*/
-	width: 30%;
-	height: 100%;
-	margin: 0px 0px 0px 0px;
+	width: 20%;
+	margin: 0px;
 	padding: 10px 10px 10px 10px;
 	text-align: left;
 	font-size: medium;
 	color: #696969;
 	background: #dddddd;
-	border: 1px solid blue;
+	/*border: 1px solid blue;*/
 }
 
 .push {
@@ -217,14 +222,14 @@ main {}
 }
 
 footer {
-	/*clear: both;*/
+	clear: both;
 	width: 100%;
 	bottom: 0;
 	color: #696969;
 	font-weight: bolder;
 	background: #ddd3ae; /*#F9E04B;*/
-	padding:10px 0 0 0;
-	/*margin: 0 0 10px;*/
+	padding: 10px 0 0 0;
+	margin: 0 0 10px 0;
 	height: 30px;
 	text-align: center;
 	border-radius: 2px;
