--- a/src/main/resources/templates/build-fraction.html
+++ b/src/main/resources/templates/build-fraction.html
@@ -48,12 +48,11 @@
     <div class="right">
         <aside>
             <p>Ten element jest w budowie</p><br>
-            <img src="images/fraction34.png" alt="ułamek"/>
-            <p> </p>
-            <p> </p>
+            <img src="images/fraction34.png" alt="ułamek"/><br>
+            <img src="images/fraction56.png" alt="ułamek"/><br>
         </aside>
     </div>
-    <div style="clear: both";></div>
+    <div style="clear: both;"></div>
 </section>
 </body>
 </html>
