--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -26,22 +26,23 @@
                 <a href="/fractions"><img th:src="@{images/calcfractions.png}"
                                            src=".../resources/static/images/calcfractions.png" alt="obrazek"/></a>
             </div>
-            <div class="home_box">
+            <div class="home_box"><a href="/build-fraction">
                 <h3>Nauka ułamków - podstawy</h3>
                 <p>W tej części dowiesz się z jakich elementów składa się ułamek zwykły, co one oznaczają
                     oraz po co w ogóle są nam ułamki. Nauczysz się prawidłowo je odczytywać.
                     Poznasz także podstawowe operacje na ułamkach.
-                </p>
+                </p></a>
             </div>
-            <div class="home_box">
+            <div class="home_box"><a href="/build-fraction">
                 <h3>Nauka ułamków - działania</h3>
                 <p>Jeśli chcesz nauczyć się działań na ułamkach zwykłych, to dobrze trafiłeś.
                     W opanowaniu umiejętności z tej części niestety potrzebna będzie wiedza z podstaw ułamków.
-                </p>
+                </p></a>
             </div>
-            <div class="home_box">
+            <div class="home_box"><a href="/build-fraction">
                 <h3>Ułamki - ciekawostki</h3>
-                <p>W tym miejscu znajdują się dodatkowe informacje o ułamkach. </p>
+                <p>W tym miejscu znajdują się dodatkowe informacje o ułamkach.
+                </p></a>
             </div>
             </main>
         </section>
